--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
         <button type="submit">Convert & Download</button>
       </form>
 
+      <details style="margin-top:16px">
+        <summary>Advanced (optional): Use your own YouTube cookies</summary>
+        <p class="note">Paste a Netscape-format cookies.txt for youtube.com. Used only for this request; not stored.</p>
+        <textarea id="cookies" rows="5" style="width:100%;padding:12px 14px;background:#0f1117;color:#e9eef7;border:1px solid #2b2f3a;border-radius:10px" placeholder="# Netscape HTTP Cookie File\n.youtube.com\tTRUE\t/\tTRUE\t..."></textarea>
+      </details>
+
       <p class="note">
         Use only for content you own or have permission to download. Respect the source platform’s Terms of Service.
       </p>
@@ -38,4 +44,3 @@
     <script src="/app.js"></script>
   </body>
   </html>
-
