--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- Custom CSS (after Tailwind) -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   
   <script>
     // Configure Tailwind to use Roboto Flex
@@ -82,8 +82,8 @@
     <div class="max-w-4xl mx-auto p-6 text-center">
       <p class="text-sm text-gray-500 mb-2">
         © 2025 YT→MP3 Converter • 
-        <a href="/terms.html" class="underline hover:text-gray-700">Terms</a> • 
-        <a href="/privacy.html" class="underline hover:text-gray-700">Privacy</a>
+        <a href="/public/terms.html" class="underline hover:text-gray-700">Terms</a> • 
+        <a href="/public/privacy.html" class="underline hover:text-gray-700">Privacy</a>
       </p>
       <p class="text-xs text-gray-400">
         High-quality MP3 conversion from YouTube videos
